# megas-xlr-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  agentos_app.py  alembic.ini  db.py  docker-compose.yml  megas-xlr-phase-0-spec.md  plan.md  pyproject.toml  research.md
.antigravity/: workspace.json
.github/workflows/: ci.yml
agents/: __init__.py  megas_as.py  megas_d.py  megas_fs.py  megas_o.py  megas_ops.py  megas_qa.py
agents/prompts/: README.md  megas_o.md
docs/: increment-1-execution.md  threat-model.md
docs/adr/: ADR-001-python-314.md  ADR-003-agno-runtime-exit.md  ADR-007-data-retention.md
megas_xlr/: __init__.py  bootstrap.py  settings.py
megas_xlr/application/: ports.py  repositories.py
megas_xlr/domain/: __init__.py  artifacts.py  budgets.py  events.py  security.py  workflows.py
megas_xlr/infrastructure/: audit.py  db.py  telemetry.py
megas_xlr/infrastructure/outbox/: __init__.py  memory.py
megas_xlr/runtime/: agno.py
megas_xlr/security/: oauth.py  redaction.py  tokens.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_foundation.py
schemas/: __init__.py  backlog.py  brief.py
scripts/: clean.py  smoke_test.py
tests/: conftest.py  test_agentos_app.py  test_megas_o.py  test_runtime.py  test_schemas.py
tests/integration/: test_migrations.py  test_postgres.py
tests/unit/: test_app_factory.py  test_outbox.py  test_redaction.py  test_security_observability.py  test_settings.py
tests/unit/domain/: test_foundation.py
