[project]
name = "megas-xlr-agent"
version = "0.1.0"
description = "Megas-xlr — multi-agent software engineering company. Phase 0 scaffold."
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [{ name = "Felipe Braat", email = "felipe@febrate.com" }]
license = { text = "MIT" }
dependencies = [
    "agno>=2.5,<3.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "google-genai>=0.8",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "schemas"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]   # handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
files = ["agents", "schemas", "agentos_app.py"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = ["offline", "integration", "online", "slow", "destructive"]
